--- a/views/student.xml
+++ b/views/student.xml
@@ -1,78 +1,98 @@
 <odoo>
-    <data>
-        <menuitem id="student_info_root_menu"
-              name="Esmech College Management"
-              sequence="100"/>
-    </data>
-<!--search view-->
-    <record id="student_info_search_view" model="ir.ui.view">
-        <field name="model">student.info</field>
-        <field name="arch" type="xml">
-                <search string="student info Categories">
-                    <field name="f_name" />
-                    <field name="l_name" />
-                    <field name="full_name" />
-                     <field name="age"/>
-                     <field name="dob"/>
-                     <field name="gender"/>
-                     <field name="rollno"/>
-                     <field name="phone"/>
-                     <field name="email"/>
-                </search>
-            </field>
-    </record>
+    <!--Main menu-->
+
+    <menuitem id="college_main" name="College" sequence="1"/>
+
+    <!--College Submenu of Main menu-->
+
+    <menuitem id="student_main_sub_menu" name="Student" parent="college_main"/>
+
     <!--tree view-->
 
-    <record id="student1_info_tree_view" model="ir.ui.view">
+    <record id="student_info_tree" model="ir.ui.view">
+        <field name="name">student.info.tree</field>
         <field name="model">student.info</field>
         <field name="arch" type="xml">
-                <tree string="Student Info">
-                    <field name="full_name"/>
-                    <field name="age"/>
-                    <field name="dob"/>
-                     <field name="gender"/>
-                     <field name="rollno"/>
-                     <field name="phone"/>
-                     <field name="email"/>
-                </tree>
-            </field>
-    </record>
-
-    <!--from views-->
-
-    <record id="student_form_view" model="ir.ui.view">
-        <field name="model">student.info</field>
-        <field name="arch" type="xml">
-            <form string="Student Info">
-                <header>
-                    <field name="full_name"/>
-                </header>
-                <sheet>
-                    <group>
-                        <field name="f_name" />
-                        <field name="l_name" />
-                        <field name="full_name" />
-                        <field name="gender"/>
+                <tree>
+                        <field name="f_name"/>
                         <field name="dob"/>
                         <field name="age"/>
-                        <field name="rollno"/>
                         <field name="phone"/>
-                        <field name="email"/>
-                    </group>
-                </sheet>
-            </form>
+                </tree>
         </field>
     </record>
-    <!--action-->
-    <record id="student_info_action_form" model="ir.actions.act_window">
-        <field name="name">Student Info</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">student.info</field>
-        <field name="search_view_id" ref="student_info_search_view"/>
-        <field name="view_id" ref="student1_info_tree_view"/>
+
+    <record id="student_info_form" model="ir.ui.view">
+        <field name="name">student.info.form</field>
+        <field name="model">student.info</field>
+        <field name="arch" type="xml">
+                <form>
+                    <sheet>
+                        <group string="Personal Information">
+                            <group>
+                                <field name="f_name" />
+                                <field name="l_name"/>
+                                <field name="full_name" />
+                                <field name="gender"/>
+                                <field name="dob"/>
+                                <field name="age"/>
+                                <field name="rollno"/>
+                                <field name="phone"/>
+                                <field name="email"/>
+                            </group>
+                        </group>
+                        <notebook>
+                            <page name="student.hobbies" string="Student Hobbies">
+                                    <group>
+                                        <field name="hobbies_ids" editable="bottom">
+                                                <tree>
+                                                    <field name="student_id"/>
+                                                    <field name="reading"/>
+                                                    <field name="swimming"/>
+                                                    <field name="dancing"/>
+                                                </tree>
+                                                <form>
+                                                    <group>
+                                                        <field name="reading"/>
+                                                    </group>
+                                                    <group>
+                                                        <field name="swimming"/>
+                                                    </group>
+                                                    <group>
+                                                        <field name="dancing"/>
+                                                    </group>
+                                                </form>
+                                        </field>
+                                    </group>
+                            </page>
+                        </notebook>
+                    </sheet>
+                </form>
+        </field>
     </record>
 
-    <!--submenu-->
-        <menuitem id="student_data_submenu" name="Student Data" parent="student_info_root_menu" sequence="0" />
-        <menuitem id="student_info_submenu" name="Student Details" parent="student_data_submenu" action="student_info_action_form" />
+    <record id="sequence_roll_number" model="ir.sequence">
+        <field name="name">Roll Number</field>
+        <field name="code">student.info</field>
+        <field name="active">TRUE</field>
+        <field name="prefix">FY</field>
+        <field name="padding">4</field>
+        <field name="number_next">1</field>
+        <field name="number_increment">1</field>
+    </record>
+
+    <!--Action Window-->
+
+    <record id="student_details_action" model="ir.actions.act_window">
+        <field name="name">Student Details</field>
+        <field name="res_model">student.info</field>
+        <field name="view_mode">tree,form</field>
+        <field name="context">{'search_default_rec_id':1}</field>
+        <field name="help" type="html">
+            <p class="oe_view_non_content_create">
+                Please enter Student details!</p>
+        </field>
+    </record>
+
+    <menuitem id="student_info" name="Student Data" action="student_details_action" parent="student_main_sub_menu"/>
 </odoo>
